nats-public.yaml
apiVersion: v1
kind: Service
metadata:
  name: nats-public
  namespace: bb
spec:
  ports:
  - name: client
    port: 4222
    protocol: TCP
    targetPort: 4222
  - name: ws
    port: 443
    protocol: TCP
    targetPort: 9222
  publishNotReadyAddresses: true
  selector:
    app.kubernetes.io/instance: nats-server
    app.kubernetes.io/name: nats
  sessionAffinity: None
  type: LoadBalancer
status:
  loadBalancer: {}
