voyager-ingress.yaml
apiVersion: voyager.appscode.com/v1
kind: Ingress
metadata:
  annotations:
    ingress.appscode.com/type: LoadBalancer
    # applies to backend service
    # ingress.appscode.com/check: "true"
    # ingress.appscode.com/check-port: "8222"
  # annotations:
  #   kubernetes.io/ingress.class: voyager
  name: voyager-ingress
  namespace: bb
spec:
  rules:
  - host: appscode.ninja
    http:
      paths:
      - backend:
          service:
            name: bytebuilders
            port:
              number: 80
        path: /
  - host: grafana.appscode.ninja
    http:
      paths:
      - backend:
          service:
            name: bytebuilders-grafana
            port:
              number: 80
        path: /
  - host: prometheus.appscode.ninja
    http:
      paths:
      - backend:
          service:
            name: bytebuilders-prom-proxy
            port:
              number: 80
        path: /
  - host: console.appscode.ninja
    http:
      paths:
      - backend:
          service:
            name: bytebuilders-cluster-ui
            port:
              number: 80
        path: /
  - host: kubedb.appscode.ninja
    http:
      paths:
      - backend:
          service:
            name: bytebuilders-kubedb-ui
            port:
              number: 80
        path: /
  - host: deploy.appscode.ninja
    http:
      paths:
      - backend:
          service:
            name: bytebuilders-deploy-ui
            port:
              number: 80
        path: /
  - host: marketplace.appscode.ninja
    http:
      paths:
      - backend:
          service:
            name: bytebuilders-marketplace-ui
            port:
              number: 80
        path: /
  - host: nats.appscode.ninja
    tcp:
      port: 4222
      backend:
        service:
          name: nats-server
          port:
            number: 4222
  frontendRules:
  - port: 4222
    rules:
    - 'tcp-request connection reject if { src 10.2.0.1 }'
    - 'tcp-request connection reject if { src 10.2.1.1 }'
    - 'tcp-request connection reject if { src 10.2.3.1 }'
    - 'tcp-request connection reject if { src 10.2.4.1 }'
    - 'tcp-request connection reject if { src 10.2.5.1 }'

  # - host: nats.appscode.ninja
  #   tcp:
  #     port: 4222
  #     backend:
  #       # backendRules:
  #       # - 'option httpchk GET /'
  #       # - 'option tcplog'
  #       # - 'option log-health-checks'

  #       # - 'http-check connect port 8222'
  #       # - 'http-check connect port 8222'
  #       # - 'http-check send meth GET  uri /'
  #       service:
  #         name: nats-server
  #         port:
  #           number: 4222
  tls:
  - hosts:
    - appscode.ninja
    - console.appscode.ninja
    - deploy.appscode.ninja
    - grafana.appscode.ninja
    - kubedb.appscode.ninja
    - marketplace.appscode.ninja
    - prometheus.appscode.ninja
    secretName: bytebuilders-cert
